# ray-ease

./: .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  blabla.py  dev.py  pyproject.toml  requirements.txt  setup.py
docs/: Makefile  conf.py  example.ipynb  make.bat
examples/: parallelize_class_method.py  pi.py  pi_ray-ease.py  pi_ray.py  registry.py
src/ray_ease/: __init__.py  __version__.py  core.py  decorators.py  registry.py  remote_as_local.py  utils.py
tests/: test_optimize_way_to_run_succeding_tasks.py  test_optimize_way_to_run_succeding_tasks_serial.py  test_ray_actor.py  test_ray_actor_serial.py  test_ray_task.py  test_ray_task_serial.py  test_registry.py  test_registry_serial.py  test_retrieve_ordered.py
