[tool.poetry]
name = "ray_ease"
version = "0.0.4"
description = "This package is a convenient Ray wrapper that enables the utilization of Ray decorated functions and actors as if they were regular local functions. With this tool, your program can seamlessly run in both parallel and serial modes without requiring any code modifications. This capability is particularly advantageous during the debugging phase, as parallelizing code may inadvertently introduce unnecessary complexities and overhead."
authors = ["Arthur Elskens"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10.6"
ray = {extras = ["default"], version = ">=2.6.2"}
tqdm = ">=4.66.1"

[tool.poetry.group.dev.dependencies]
twine = ">=4.0.2"
black = ">=23.7.0"
pylint = ">=2.17.5"
ipykernel = ">=6.25.0"

[tool.poetry.group.tests.dependencies]
pytest = ">=7.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
